try to fix spacing issues in chromatic

--- a/packages/storybook/.storybook/style.scss
+++ b/packages/storybook/.storybook/style.scss
@@ -1,4 +1,23 @@
 
+body {
+  background: #fff;
+  color: #1b1b1b;
+  font-size: 16px;
+  font-family: inherit;
+}
+
+body {
+  color: #222;
+  cursor: auto;
+  font-family: Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
 
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/uswds-typography.css";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-eyebrow.css";
@@ -7,6 +26,9 @@
 @import '@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-action-link.css';
 @import '@department-of-veterans-affairs/css-library/dist/stylesheets/_mixins.scss';
 @import '@department-of-veterans-affairs/css-library/dist/stylesheets/site/_m-crisis-line.scss';
+
+
+
 
 // Remove Negative Margin via Default Storybook CSS
 // This is causing the show code button to overlap with components
